--- a/producao/templates/producao/povoamento_lotes.html
+++ b/producao/templates/producao/povoamento_lotes.html
@@ -108,8 +108,8 @@
               <th scope="col" style="width:190px">Curva</th>
               <th scope="col" style="width:130px">Data</th>
               <th scope="col" style="width:140px">Lote</th>
-              <th scope="col" style="width:110px" class="text-end">Qtde</th>
-              <th scope="col" style="width:110px" class="text-end">P.Médio(g)</th>
+              <th scope="col" style="width:110px">Qtde</th>
+              <th scope="col" style="width:110px">P.Médio(g)</th>
               <th scope="col" style="width:160px">Fase</th>
               <th scope="col" style="width:160px">Linha</th>
               <th scope="col" style="width:120px">Tamanho</th>
@@ -119,7 +119,7 @@
         </table>
       </div>
       <div class="table-empty-state d-none" data-state="empty">
-        <i class="bi bi-layout-text-sidebar"></i>
+        <i class="bi bi-table"></i>
         <p class="mb-0">Nenhuma linha adicionada. Use “Adicionar Linha” para começar.</p>
       </div>
     </div>
