--- a/templates/base.html
+++ b/templates/base.html
@@ -84,6 +84,7 @@
   <script src="{% static 'js/povoamento_lotes.js' %}" defer></script>
   <script src="{% static 'js/importar_xml.js' %}" defer></script>
   <script src="{% static 'js/permissions.js' %}" defer></script>
+  <script src="{% static 'js/criar_usuario.js' %}" defer></script>
   <script src="{% static 'js/scripts.js' %}" defer></script>
   
 
