Ajuste Povoamento Lotes

--- a/producao/templates/producao/povoamento_lotes.html
+++ b/producao/templates/producao/povoamento_lotes.html
@@ -62,8 +62,8 @@
         <div class="col-md-3 col-sm-6">
           <label for="tipo-tanque" class="form-label">Tipo de Tanque</label>
           <select id="tipo-tanque" class="form-select form-select-sm" data-role="tipo-tanque">
-            <option value="Tanque Vazio">Tanque Vazio</option>
-            <option value="Tanque Povoado">Tanque Povoado</option>
+            <option value="VAZIO">Tanque Vazio</option>
+            <option value="POVOADO">Tanque Povoado</option>
           </select>
           <div class="form-text">Filtra tanques com ou sem lote ativo.</div>
         </div>
