--- a/templates/partials/nota_fiscal/editar_entrada.html
+++ b/templates/partials/nota_fiscal/editar_entrada.html
@@ -116,7 +116,7 @@
                     {% for item in produtos %}                      
                       <tr>
                         <td>{{ forloop.counter }}</td>
-                        <td>{{ item.codigo }}</td>
+                        <td>{{ item.produto.codigo_interno }}</td>
                         <td>{{ item.nome }}</td>
                         <td>{{ item.ncm }}</td>
 
