--- a/templates/partials/produtos/cadastrar_produto.html
+++ b/templates/partials/produtos/cadastrar_produto.html
@@ -9,7 +9,8 @@
 
     <div class="row g-3">
       <!-- Identificação -->
-      <div class="col-md-4">{{ form.codigo.label_tag }} {{ form.codigo|add_class:"form-control" }}</div>
+      <div class="col-md-4">{{ form.codigo_interno.label_tag }} {{ form.codigo_interno|add_class:"form-control" }}</div>
+      <div class="col-md-4">{{ form.codigo_fornecedor.label_tag }} {{ form.codigo_fornecedor|add_class:"form-control" }}</div>
       <div class="col-md-8">{{ form.nome.label_tag }} {{ form.nome|add_class:"form-control" }}</div>
       
 
