--- a/templates/partials/produtos/lista_produtos.html
+++ b/templates/partials/produtos/lista_produtos.html
@@ -67,7 +67,7 @@
               <td>
                 <input type="checkbox" class="check-produto" value="{{ produto.id }}">
               </td>
-              <td>{{ produto.codigo }}</td>
+              <td>{{ produto.codigo_interno|default:produto.codigo_fornecedor }}</td>
               <td>{{ produto.nome }}</td>
               <td>{{ produto.categoria.nome }}</td>
               <td>{{ produto.unidade_medida_interna.sigla }}</td>
